--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         </div>
       </section>
       <div class="main-card" id="exhibits">
-        <img src="images/exhibits.jpg" class="img1-1" />
+        <img src="images/exhibits.webp" class="img1-1" />
         <p class="desktop-p1">
           We believe science should not be confined to the textbook, but brought to live through exhibits. This is why we have over 1000 different exhibits on
           the many varied subjects of science to explore. Many of these exhibits are designed for you to interact with and play around to see science come to
