--- a/explore.html
+++ b/explore.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <meta name="description" content="Science Community Museum - Come join us at CSM" />
+        <meta name="description" content="Science Community Museum - See whats new. Whether you are a kid, teacher or researcher we have something for you" />
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link href="https://fonts.googleapis.com/css2?family=League+Spartan:wght@200;400;600;800&display=swap" rel="stylesheet" />
